# AdventOfCode2024

./: .gitignore  CMakeLists.txt  adventofcode.cpp  adventofcode.h
days/: helpers.h
days/day1/: day1.cpp
days/day10/: day10.cpp  day10.h
days/day11/: day11.cpp
days/day2/: day2.cpp  day2.h
days/day3/: day3.cpp
days/day4/: day4.cpp
days/day5/: day5.cpp
days/day6/: day6.cpp
days/day7/: day7.cpp
days/day8/: day8.cpp
days/day9/: day9.cpp
